--- a/project.html
+++ b/project.html
@@ -9,8 +9,8 @@
   <h1>
     عاشق فاطمه هستی ، دوسش داری؟ اگر چراغ روشن شد یعنی دیوانشی.
   </h1>
-  <button onclick="document.getElementById('love').src= '/images/off.gif';">No no</button>
-  <img id="love" src="/images/off.gif">
-  <button onclick="document.getElementById('love').src='/images/on.gif';">Yes yes</button>
+  <button onclick="document.getElementById('love').src= '/off.gif';">No no</button>
+  <img id="love" src="/off.gif">
+  <button onclick="document.getElementById('love').src='/on.gif';">Yes yes</button>
 </body>
 </html>
